# PIOC

./: .env.development  .env.production  .gitignore  AGENTS.md  HANDOFF.md  README.md  commands.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
pi-extensions/: pioc-control.ts  pioc-hashline.ts
scripts/: check-version.mjs  prepare-prod-tauri-config.mjs
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: command-palette.ts
src/lib/components/: CommandPalette.svelte  HotkeyList.svelte  TerminalWorkspace.svelte  WTermTerminal.svelte
src/lib/components/svelte-bits/: ASCIIText.svelte
src/lib/components/ui/button/: button.svelte  button.variants.ts  index.ts
src/lib/components/ui/command/: command-empty.svelte  command-group.svelte  command-input.svelte  command-item.svelte  command-list.svelte  command.svelte  index.ts
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte
src/lib/components/ui/toggle/: index.ts  toggle.svelte  toggle.variants.ts
