[package]
name = "pioc"
version = "0.1.1"
description = "PIOC Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pioc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fs2 = "0.4"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
